Fix Safari Finder render issue
In Safari (and perhaps other browsers?) `transparent` when used in
gradients are rendered with a strange dark fade instead of actually
being transparent. Using rgba with a 0 alpha fixes this. Specifically
this was noticed in the Finder (there's a truncation fade effect on the
right hand side), but could be else where in the app as well.

The fix was to add a new css variable: `--color-transparent` that
evaluates to `rgba(255, 255, 255, 0)` and use that in place of
`transparent` everywhere.

--- a/src/css/definition-doc.css
+++ b/src/css/definition-doc.css
@@ -42,7 +42,8 @@
   border-radius: var(--border-radius-base);
   margin-bottom: 1rem;
   scrollbar-width: auto;
-  scrollbar-color: var(--color-workspace-item-subtle-fg) transparent;
+  scrollbar-color: var(--color-workspace-item-subtle-fg)
+    var(--color-transparent);
   overflow: auto;
 }
 
@@ -64,7 +65,7 @@
 .definition-doc .source.example::-webkit-scrollbar-track,
 .definition-doc .source.eval::-webkit-scrollbar-track,
 .definition-doc .source.signatures .signature::-webkit-scrollbar-track {
-  background: transparent;
+  background: var(--color-transparent);
 }
 .definition-doc .source.code::-webkit-scrollbar-thumb,
 .definition-doc .sources .source::-webkit-scrollbar-thumb,
